# forkserver

./: .gitignore  Caddyfile  Cargo.toml  Makefile  README.md  docker-compose.ecs.yml  docker-compose.yml
archive/: .env.example  .gitignore  .gitlab-ci.yml  .prettierrc.yaml  Dockerfile  README.md  docker-compose.sample.yml  docker-compose.yml  forkserver.service  hardhat.config.ts  package.json  tsconfig.json
archive/src/: ForkedNode.ts  constants.ts  index.ts  nodes.ts
archive/src/web/: index.html
dashboard/: .env.dev  Dockerfile  package.json  tailwind.config.js
dashboard/src/components/: Button.tsx  Card.tsx  ConfigButton.tsx  Fox.tsx  FundEthCard.tsx  FundEthForm.tsx  FundTokenCard.tsx  FundTokenForm.tsx  IncreaseTimeCard.tsx  MineBlockCard.tsx  MineBlockForm.tsx  RouteGuard.tsx  Slider.tsx  StateManagementCard.tsx  TokenBalance.tsx  useLocalStorage.ts
dashboard/src/config/: constants.ts  store.ts
dashboard/src/context/: GrpcContext.tsx
dashboard/src/hooks/: useBalanceOfSlot.tsx  useGetBalanceOfSlot.tsx  useMetamask.tsx
dashboard/src/pages/: _app.tsx  _document.tsx  index.tsx  main.module.css
dashboard/src/proto/: Forkserver.client.ts  Forkserver.ts
dashboard/src/utils/: text.ts  timestampToLocaleString.ts
deploy/: Caddy.Dockerfile  Caddyfile  README.md  docker-compose.ecs.yml  docker-compose.traefik.yml  docker-compose.yml
proto/: Forkserver.proto
server/: .env.example  .gitignore  Cargo.toml  Cheats.json  Dockerfile  build.rs
server/src/: main.rs  model.rs  server.rs  utils.rs
server/tests/: test.http  test.rs
(+18 files in other folders)
