[package]
name = "forkserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.8.4"

[dependencies]
axum = "0.6.6"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8.3"
tonic-reflection = "0.6.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde_json = "1.0.89"
tracing = "0.1.37"
hyper = "0.14.24"
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
prost = "0.11.6"
prost-derive = "0.11.6"
ethers = "1.0.2"
ethers-core = "1.0.2"
dotenvy = "0.15.6"
tonic-web = "0.5.0"

[dev-dependencies]
anyhow = "1"
